<resources>
    <string name="app_name">CalculatorForAndroid</string>
    <string name="key_c">C</string>
    <string name="key_plus_minus">+/-</string>
    <string name="key_percent">%</string>
    <string name="key_divide">/</string>
    <string name="key_multiply">*</string>
    <string name="key_sum">+</string>
    <string name="key_subtract">-</string>
    <string name="key_drop">,</string>
    <string name="key_result">=</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
</resources>